test/files/neg/nested-fn-print.check
nested-fn-print.scala:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var x3: Int => Double
      ^
nested-fn-print.scala:7: error: type mismatch;
 found   : "a".type (with underlying type String)
 required: Int => (Float => Double)
    x1 = "a"
         ^
nested-fn-print.scala:8: error: type mismatch;
 found   : "b".type (with underlying type String)
 required: (Int => Float) => Double
    x2 = "b"
         ^
nested-fn-print.scala:9: error: type mismatch;
 found   : "c".type (with underlying type String)
 required: Int => Double
    x3 = "c"
         ^
four errors found
